--- a/public/styles/site/_book.scss
+++ b/public/styles/site/_book.scss
@@ -40,7 +40,7 @@
 @media screen and (max-width: 768px) {
 	.book {
     .columns {
-      flex-direction: column;
+      display: block;
       .left {
         flex-basis: 100%;
       }
